Fixing overlap issue with cta block on mobile

--- a/content/themes/igcp/inc/scss/components/_cta.scss
+++ b/content/themes/igcp/inc/scss/components/_cta.scss
@@ -78,7 +78,10 @@ ul.cta-Block_Items,
   @include no-margin-padding;
   display: flex;
   justify-content: center;
-  margin-right: -#{$grid-gap};
+
+  @include break-min($sm) {
+    margin-right: -#{$grid-gap};
+  }
 
   .cta-Block-share & {
     @include break-max($sm) {
@@ -91,12 +94,12 @@ li.cta-Block_Item,
 .editor-block-list__layout li.cta-Block_Item {
   @include no_bullets;
   margin-right: $grid-gap;
-  width: calc((6 / 12) * 100%);
-  flex: 0 1 calc((6 / 12) * 100%);
+  width: calc(((6 / 12) * 100%) - #{$grid-gap * 2});
+  flex: 0 1 calc(((6 / 12) * 100%) - #{$grid-gap * 2});
 
   @include break-min($sm) {
-    width: calc((2 / 6) * 100%);
-    flex: 0 1 calc((2 / 6) * 100%);
+    width: calc(((2 / 6) * 100%) - #{$grid-gap});
+    flex: 0 1 calc(((2 / 6) * 100%) - #{$grid-gap});
 
     max-width: 150px;
 
